# ece-579-a-star-8-puzzle

./: AGENTS.md  README.md  puzzle_cli.py  puzzle_run.py  pyproject.toml
app/: __init__.py
app/configs/: app.yml  cli.yml  container.yml  error.yml  feature.yml  logging.yml
app/events/: puzzle.py  settings.py
app/events/tests/: test_puzzle.py
app/utils/: __init__.py  heuristic.py  pdb.py  search.py  state.py
app/utils/tests/: test_heuristic.py  test_pdb.py  test_search.py  test_state.py
docs/: heuristics_guide.md
docs/guides/utils/: heuristic.md  pdb.md  search.md  state.md
