[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "eight-puzzle-solver"
version = "0.1.0"
description = "A* 8-Puzzle Solver using the Tiferet DDD Framework"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Andrew Shatz", email = "ashatz@arizona.edu"},
]
keywords = ["8-puzzle", "a-star", "search", "heuristic", "tiferet"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "tiferet>=1.9.5",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[project.scripts]
puzzle-cli = "puzzle_cli:main"
