[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "eight-puzzle-solver"
dynamic = ["version"]
description = "A* 8-Puzzle Solver using the Tiferet DDD Framework"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Andrew Shatz", email = "ashatz@arizona.edu"},
]
keywords = ["8-puzzle", "a-star", "search", "heuristic", "tiferet"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "tiferet>=1.9.5",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
]

[tool.hatch.version]
path = "app/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["app"]

[project.scripts]
puzzle-cli = "puzzle_cli:main"
